--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 -->
 <html>
 	<head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-9804352200766483",
+          enable_page_level_ads: true
+     });
+</script>
 		<title>Brayan Rojas!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
