--- a/lanoviadetodos.html
+++ b/lanoviadetodos.html
@@ -13,7 +13,7 @@
                       enable_page_level_ads: true
                  });
             </script>
-		<title>Sin Ropa Eres Mia - Pipe Bueno | Letras | BrayanRojasTV</title>
+		<title>La Novia de Todos - Alzate | Letras | BrayanRojasTV</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,8 +40,8 @@
 				<section class="wrapper style1">
 					<div class="inner">
 						<header class="align-center">
-							<h2>Sin Ropa Eres Mia | Pipe Bueno</h2>
-							<p>Video Creado por BrayanRojasTV, bloqueado por YTRocket</p>
+							<h2>La Novia de Todos | Alzate</h2>
+							<p>Video Creado por BrayanRojasTV, bloqueado por 2heart y Sony Music</p>
 						</header>
 						<div class="video">
 							<div class="video-wrapper">
@@ -59,36 +59,68 @@ kWidget.embed({
 </script>
 							</div>
 							<p class="caption">
-								1 hora de edicion, 3 horas de exportacion y unos buenos oidos.
+								2 hora de edicion, 5 horas de exportacion y unos buenos oidos.
 							</p>
 						</div>
 						<p>Letra:</p>
-						<p>Sin ropa eres mia - Pipe Bueno.
+						<p>Suscribate para mas letras de canciones populares
 
-                                Eres tan bella, Un vestido sin ropa elegante..
-                                Estas cosas que no puedo comprarte, pero el sabra como amarte.
-                                Muchos dirian (Ja!) que son la pareja perfecta, en las fotos te miras contenta.
-                                Pero nooooo.
-                                No son lo que aparentan.
-                                Solo yo, se la verdad.
-                                a mi no me molesta cuando este presume porque al final.
-                                No lo parece, pero sin ropa, eres mia.
-                                Cuando cerramos la puerta, se apagan las luces, ya no eres prohibida.
-                                No lo parece.
-                                pero sin ropa, eres mia.
-                                Cuando mis manos te tocan, te vuelves la diosa de mis fantasias.
-                                El cree que te da placer, pero en mi piel te desquitas.
-                                Pipe Bueno.
-                                Ayyyy!.
-                                Solo yo se la verdad.
-                                a mi no me molesta cuando este presume porque al final.
-                                No lo parece, pero sin ropa, eres mia.
-                                Cuando cerramos la puerta, se apagan las luces, ya no eres prohibida.
-                                No lo parece.
-                                pero sin ropa, eres mia.
-                                Cuando mis manos te tocan, te vuelves la diosa de mis fantasias.
-                                El cree que te da placer, pero en mi piel te desquitas.
-                                En mi piel te desquitas.</p>
+Letra:
+
+Que te vieron con un cucho
+Y no era tu papá
+Y al otro día que te vieron con tu novio oficial
+Entonces quién vengo a ser yo si nos ibamo a casar.
+Ya todo el mundo murmura que soy solo uno más
+
+Y me das miedo a que me niegues en la cara
+ay que de leche somos todos hermanitos
+y al mismo tiempo estás con otros y conmigo
+
+Y así acabó,Y así acabó, Y así acabó
+lo que hubo aquí entre los todos
+ya todo se acabó
+
+Ya sé quién sos, Ya sé quién sos, Ya sé quién sos
+sois la novia de todos
+ya todos saben quién sos
+
+Así es que es
+Alzate papá
+tas pillada (jajay)
+
+Que te vieron con un cucho
+Y no era tu papá
+Y al otro día que te vieron con tu novio oficial
+Entonces quién vengo a ser yo si nos ibamo a casar.
+Ya todo el mundo murmura que soy solo uno más
+
+
+ 
+Y me das miedo a que me niegues en la cara
+ay que de leche somos todos hermanitos
+y al mismo tiempo estás con otros y conmigo
+
+Y así acabó,Y así acabó, Y así acabó
+lo que hubo aquí entre los todos
+ya todo se acabó
+
+Ya sé quién sos, Ya sé quién sos, Ya sé quién sos
+sos la novia de todos
+ya todos saben quién sos
+
+Y me da piedra que quieres darme en la cara
+si yo conozco ya todas tus travesuras
+
+Y así acabó,Y así acabó, Y así acabó
+lo que hubo aquí entre los todos
+ya todo se acabó
+
+Ya sé quién sos, Ya sé quién sos, Ya sé quién sos
+sos la novia de todos
+ya todos saben quién sos
+
+ahí quedó.</p>
 					</div>
 				</section>
 
