--- a/lanoviadetodos.html
+++ b/lanoviadetodos.html
@@ -13,7 +13,7 @@
                       enable_page_level_ads: true
                  });
             </script>
-		<title>La Novia de Todos - Alzate | Letras | BrayanRojasTV</title>
+		<title>Sin Ropa Eres Mia - Pipe Bueno | Letras | BrayanRojasTV</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,8 +40,8 @@
 				<section class="wrapper style1">
 					<div class="inner">
 						<header class="align-center">
-							<h2>La Novia de Todos | Alzate</h2>
-							<p>Video Creado por BrayanRojasTV, bloqueado por 2heart y Sony Music</p>
+							<h2>Sin Ropa Eres Mia | Pipe Bueno</h2>
+							<p>Video Creado por BrayanRojasTV, bloqueado por YTRocket</p>
 						</header>
 						<div class="video">
 							<div class="video-wrapper">
@@ -59,72 +59,84 @@ kWidget.embed({
 </script>
 							</div>
 							<p class="caption">
-								2 hora de edicion, 5 horas de exportacion y unos buenos oidos.
+								1 hora de edicion, 3 horas de exportacion y unos buenos oidos.
 							</p>
 						</div>
 						<p>Letra:</p>
-						<p>Suscribate para mas letras de canciones populares
+						<p>Sin ropa eres mia - Pipe Bueno.
 
-Letra:
-
-Que te vieron con un cucho
-Y no era tu papá
-Y al otro día que te vieron con tu novio oficial
-Entonces quién vengo a ser yo si nos ibamo a casar.
-Ya todo el mundo murmura que soy solo uno más
-
-Y me das miedo a que me niegues en la cara
-ay que de leche somos todos hermanitos
-y al mismo tiempo estás con otros y conmigo
-
-Y así acabó,Y así acabó, Y así acabó
-lo que hubo aquí entre los todos
-ya todo se acabó
-
-Ya sé quién sos, Ya sé quién sos, Ya sé quién sos
-sois la novia de todos
-ya todos saben quién sos
-
-Así es que es
-Alzate papá
-tas pillada (jajay)
-
-Que te vieron con un cucho
-Y no era tu papá
-Y al otro día que te vieron con tu novio oficial
-Entonces quién vengo a ser yo si nos ibamo a casar.
-Ya todo el mundo murmura que soy solo uno más
-
-
- 
-Y me das miedo a que me niegues en la cara
-ay que de leche somos todos hermanitos
-y al mismo tiempo estás con otros y conmigo
-
-Y así acabó,Y así acabó, Y así acabó
-lo que hubo aquí entre los todos
-ya todo se acabó
-
-Ya sé quién sos, Ya sé quién sos, Ya sé quién sos
-sos la novia de todos
-ya todos saben quién sos
-
-Y me da piedra que quieres darme en la cara
-si yo conozco ya todas tus travesuras
-
-Y así acabó,Y así acabó, Y así acabó
-lo que hubo aquí entre los todos
-ya todo se acabó
-
-Ya sé quién sos, Ya sé quién sos, Ya sé quién sos
-sos la novia de todos
-ya todos saben quién sos
-
-ahí quedó.</p>
+                                Eres tan bella, Un vestido sin ropa elegante..
+                                Estas cosas que no puedo comprarte, pero el sabra como amarte.
+                                Muchos dirian (Ja!) que son la pareja perfecta, en las fotos te miras contenta.
+                                Pero nooooo.
+                                No son lo que aparentan.
+                                Solo yo, se la verdad.
+                                a mi no me molesta cuando este presume porque al final.
+                                No lo parece, pero sin ropa, eres mia.
+                                Cuando cerramos la puerta, se apagan las luces, ya no eres prohibida.
+                                No lo parece.
+                                pero sin ropa, eres mia.
+                                Cuando mis manos te tocan, te vuelves la diosa de mis fantasias.
+                                El cree que te da placer, pero en mi piel te desquitas.
+                                Pipe Bueno.
+                                Ayyyy!.
+                                Solo yo se la verdad.
+                                a mi no me molesta cuando este presume porque al final.
+                                No lo parece, pero sin ropa, eres mia.
+                                Cuando cerramos la puerta, se apagan las luces, ya no eres prohibida.
+                                No lo parece.
+                                pero sin ropa, eres mia.
+                                Cuando mis manos te tocan, te vuelves la diosa de mis fantasias.
+                                El cree que te da placer, pero en mi piel te desquitas.
+                                En mi piel te desquitas.</p>
 					</div>
 				</section>
 
 			<!-- Three -->
+				<section class="wrapper ">
+					<div class="inner">
+						<header class="align-center">
+							<h2>Aliquam ipsum purus dolor</h2>
+							<p>Cras sagittis turpis sit amet est tempus, sit amet consectetur purus tincidunt.</p>
+						</header>
+
+						<!-- 3 Column Video Section -->
+							<div class="flex flex-3">
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/pic09.jpg" alt="" />
+										<div class="arrow">
+											<div class="icon fa-play"></div>
+										</div>
+									</div>
+									<p class="caption">
+										Cras eget lacus sed mauris scelerisque tincidunt
+									</p>
+									<a href="generic.html" class="link"><span>Click Me</span></a>
+								</div>
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/pic10.jpg" alt="" />
+										<div class="arrow">
+											<div class="icon fa-play"></div>
+										</div>
+									</div>
+									<p class="caption">
+										Vivamus vulputate lacus non massa auctor lobortis
+									</p>
+									<a href="generic.html" class="link"><span>Click Me</span></a>
+								</div>
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/pic11.jpg" alt="" />
+										<div class="arrow">
+											<div class="icon fa-play"></div>
+										</div>
+									</div>
+									<p class="caption">
+										Nam eu nisi non ante sodales interdum a vitae neque
+									</p>
+									<a href="generic.html" class="link"><span>Click Me</span></a>
 								</div>
 							</div>
 					</div>
@@ -135,13 +147,45 @@ ahí quedó.</p>
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
-					
+					<div class="flex flex-3">
+						<div class="col">
+							<h3>Vestibullum</h3>
+							<ul class="alt">
+								<li><a href="#">Nascetur nunc varius commodo.</a></li>
+								<li><a href="#">Vis id faucibus montes tempor</a></li>
+								<li><a href="#">Massa amet lobortis vel.</a></li>
+								<li><a href="#">Nascetur nunc varius commodo.</a></li>
+							</ul>
+						</div>
+						<div class="col">
+							<h3>Lobortis</h3>
+							<ul class="alt">
+								<li><a href="#">Nascetur nunc varius commodo.</a></li>
+								<li><a href="#">Vis id faucibus montes tempor</a></li>
+								<li><a href="#">Massa amet lobortis vel.</a></li>
+								<li><a href="#">Nascetur nunc varius commodo.</a></li>
+							</ul>
+						</div>
+						<div class="col">
+							<h3>Accumsan</h3>
+							<ul class="alt">
+								<li><a href="#">Nascetur nunc varius commodo.</a></li>
+								<li><a href="#">Vis id faucibus montes tempor</a></li>
+								<li><a href="#">Massa amet lobortis vel.</a></li>
+								<li><a href="#">Nascetur nunc varius commodo.</a></li>
+							</ul>
+						</div>
+					</div>
+				</div>
 				<div class="copyright">
 					<ul class="icons">
-						<li><a href="https://Twitter.com/BrayanRojasTV_" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-		
+						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
 					</ul>
-					&copy; BrayanRojasTV.
+					&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com">Coverr</a>. Video: <a href="https://coverr.co">Coverr</a>.
+				</div>
 			</footer>
 
 		<!-- Scripts -->
