--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 				<ul class="links">
 					<li><a href="index.html">Inicio</a></li>
 				</ul>
+				<ul class="links">
+					<li><a href="stream.html">En vivo!</a></li>
+				</ul>
 			</nav>
 
 			<!-- Banner -->
