--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 -->
 <html>
 	<head>
+		 <meta name="Description" CONTENT="La pagina oficial de BrayanRojasTV, aca esta los videos bloqueados en YouTube">
+		<meta name="robots" content="noindex,nofollow">
+		<meta name="googlebot" content="brayanrojastv, brayan, brayanrojas, brayan rojas, brayan rojas tv, devuelveme, devuelveme la, devuelveme la vida, alzate."/>
+		
 		<title>Brayan Rojas!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
