--- a/japan/index.html
+++ b/japan/index.html
@@ -64,7 +64,7 @@
 							<div class="flex flex-2">
 								<div class="video col">
 									<div class="image fit">
-										<img src="../images/sinropaeresmia.jpg" alt="" />
+										<img src="../images/pipebueno.jpg" alt="" />
 										<div class="arrow">
 											<div class="icon fa-play"></div>
 										</div>
@@ -76,7 +76,7 @@
 								</div>
 								<div class="video col">
 									<div class="image fit">
-										<img src="../images/lanovia.png" alt="" />
+										<img src="../images/alzate.jpg" alt="" />
 										<div class="arrow">
 											<div class="icon fa-play"></div>
 										</div>
@@ -111,7 +111,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/lanovia.png" alt="" />
+														<img src="../images/alzate.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -121,7 +121,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/sinropaeresmia.jpg" alt="" />
+														<img src="../images/pipebueno.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
