--- a/japan/index.html
+++ b/japan/index.html
@@ -64,7 +64,7 @@
 							<div class="flex flex-2">
 								<div class="video col">
 									<div class="image fit">
-										<img src="../images/pipebueno.jpg" alt="" />
+										<img src="images/pipebueno.jpg" alt="" />
 										<div class="arrow">
 											<div class="icon fa-play"></div>
 										</div>
@@ -76,7 +76,7 @@
 								</div>
 								<div class="video col">
 									<div class="image fit">
-										<img src="../images/alzate.jpg" alt="" />
+										<img src="images/alzate.jpg" alt="" />
 										<div class="arrow">
 											<div class="icon fa-play"></div>
 										</div>
@@ -111,7 +111,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/alzate.jpg" alt="" />
+														<img src="images/alzate.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -121,7 +121,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/pipebueno.jpg" alt="" />
+														<img src="images/pipebueno.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -131,7 +131,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/pic03.jpg" alt="" />
+														<img src="images/pic03.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -141,7 +141,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/pic04.jpg" alt="" />
+														<img src="images/pic04.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -151,7 +151,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/pic05.jpg" alt="" />
+														<img src="images/pic05.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -161,7 +161,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/pic06.jpg" alt="" />
+														<img src="images/pic06.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -177,7 +177,7 @@
 												<div class="video col">
 													<h1>:(</h1>
 													<div class="image fit">
-														<img src="../images/pic06.jpg" alt="" />
+														<img src="images/pic06.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -187,7 +187,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/pic05.jpg" alt="" />
+														<img src="images/pic05.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -197,7 +197,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/pic04.jpg" alt="" />
+														<img src="images/pic04.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -207,7 +207,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/pic03.jpg" alt="" />
+														<img src="images/pic03.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -217,7 +217,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/pic02.jpg" alt="" />
+														<img src="images/pic02.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -227,7 +227,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/pic01.jpg" alt="" />
+														<img src="images/pic01.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -261,7 +261,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="https://encrypted-tbn0.gstatic.com/../images?q=tbn:ANd9GcQIqekNEb--p-AjndScDvfsmghFGCfOQMj-ryD2v0YtlGVDgfVk" alt="" />
+														<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQIqekNEb--p-AjndScDvfsmghFGCfOQMj-ryD2v0YtlGVDgfVk" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -271,7 +271,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/pic06.jpg" alt="" />
+														<img src="images/pic06.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -281,7 +281,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/pic05.jpg" alt="" />
+														<img src="images/pic05.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
@@ -291,7 +291,7 @@
 											<!-- Video Thumbnail -->
 												<div class="video col">
 													<div class="image fit">
-														<img src="../images/pic04.jpg" alt="" />
+														<img src="images/pic04.jpg" alt="" />
 														<div class="arrow">
 															<div class="icon fa-play"></div>
 														</div>
